--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   --gray: #A1A1A1;
 }
 
-body {
+.body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   font-size: 1.3rem;
@@ -21,63 +21,77 @@ body {
   background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23a1a1a1' fill-opacity='0.59' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
-h1 {
+.heading-primary {
   font-size: 2.5rem;
-}
-
-h1, h2 {
   text-align: center;
+  margin-bottom: 24px
 }
 
-a {
+.heading-secondary {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 24px;
+}
+
+.link {
   text-decoration: none;
+  color: var(--danger-color);
 }
 
-a:hover {
+.link:hover {
   text-decoration: underline;
 }
 
-header {
+.header {
   background-color: var(--primary-color);
   padding: 48px 0;
   border-bottom: var(--secondary-color) 6px solid;
 }
 
-header a {
-  font-size: 1.5rem;
-  color: var(--off-white);
+.main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-main a {
-  color: var(--danger-color);
-}
-
-main > article, nav{
+.nav {
   max-width: 1200px;
   margin: 0 auto;
   box-sizing: border-box;
-}
-
-nav {
   display: flex;
 }
 
-nav > a:not(:first-of-type){
+.nav__link, .nav__logo {
+  font-size: 1.5rem;
+  color: var(--off-white);
+  text-decoration: none;
+}
+
+.nav__link:hover, .nav__logo:hover {
+  text-decoration: underline;
+}
+
+.nav__link {
   margin-left: 24px;
 }
 
-nav > a.logo {
+.nav__logo {
   margin-right: auto;
   text-transform: uppercase;
 }
 
-main > section, main > article {
+.section, .article {
   margin-bottom: 96px;
   box-shadow: 4px 4px 10px var(--gray);
   background-color: var(--white);
+  padding: 48px 96px;
+  max-width: 1200px;
+  box-sizing: border-box;
 }
 
-main > section.hero {
+.hero {
+  width: 100vw;
   height: 300px;
   background-image: url(https://picsum.photos/1920/1000);
   background-size: cover;
@@ -87,9 +101,11 @@ main > section.hero {
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
+  margin-bottom: 96px;
+  box-shadow: 4px 4px 10px var(--gray);
 }
 
-section.hero > .call-to-action {
+.hero__call-to-action {
   font-size: 2rem;
   font-weight: 700;
   text-shadow: var(--white) 0px 0px 10px, var(--white) 0px 0px 20px, var(--gray) 2px 2px 2px;
@@ -97,7 +113,7 @@ section.hero > .call-to-action {
   margin: 0;
 }
 
-section.hero > button {
+.hero__button {
   background-color: var(--secondary-color);
   border: none;
   padding: 12px 24px;
@@ -106,16 +122,18 @@ section.hero > button {
   cursor: pointer;
 }
 
-main article {
-  padding: 48px 96px;
+.article__content {
+  padding: 48px;
 }
 
-main p {
+.text-paragraph {
   line-height: 1.75;
-  margin-bottom: 48px;;
+  margin-bottom: 48px;
+  font-size: 1.3rem;
+  color: var(--text-color);
 }
 
-main > article img {
+.article__image {
   float: left;
   width: 300px;
   height: auto;
@@ -123,7 +141,7 @@ main > article img {
   margin-bottom: 6px;
 }
 
-footer {
+.footer {
   margin-top: auto;
   background-color: var(--gray);
   text-align: center;
